[JBWS-4456] Remove Security Manager and Security Policy usages (preparation for JDK25 support)